karnc/tests/fixtures/positive/177_consume_adapter_workers/src/auth/sessions.karn
context auth.sessions

consumes tokens

service login {
  on call(secret: String) -> Effect[String] given tokens.Jwt {
    let token <- tokens.Jwt.sign("u1", secret)
    token
  }
}
