karnc/tests/fixtures/negative/138_bodied_provider_in_adapter/src/tokens.karn
adapter tokens {
  binding "./tokens.binding.ts"

  capability Jwt {
    fn sign(secret: String) -> Effect[String]
  }

  provides Jwt = JoseJwt {
    fn sign(secret: String) -> Effect[String] {
      secret
    }
  }
}
